[package]
name = "karate-monitor"
version = "0.1.0"
edition = "2021"
description = "Karate E2E test monitoring and log analysis tool for personal use"
authors = ["Anthony Hung"]
license = "MIT"

[dependencies]
tokio = { version = "1.42", features = ["full", "signal", "process"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.11"
colored = "2.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
codegen-units = 1   # Better optimization
